# zapple-pay-backend

./: .gitignore  Cargo.toml  README.md  justfile
migrations/2023-09-12-044856_baseline/: down.sql  up.sql
migrations/2023-09-13-044905_add_timestamps/: down.sql  up.sql
migrations/2023-09-14-201349_subscription_last_paid/: down.sql  up.sql
migrations/2023-09-15-185223_donate_to_npub/: down.sql  up.sql
migrations/2023-09-22-034827_pending-payments/: down.sql  up.sql
migrations/2023-10-26-104606_zap_event_foreign_keys/: down.sql  up.sql
migrations/2023-10-29-225252_wallet_auth/: down.sql  up.sql
migrations/2023-11-20-093606_nwa_custom_relay/: down.sql  up.sql
migrations/2024-03-27-230026_zap-event-fk/: down.sql  up.sql
migrations/2024-03-28-001302_zap-event-config-fk/: down.sql  up.sql
src/: config.rs  db.rs  listener.rs  main.rs  nip49.rs  profile_handler.rs  routes.rs  subscriber.rs  subscription_handler.rs  utils.rs
src/models/: donation.rs  mod.rs  schema.rs  subscription_config.rs  user.rs  wallet_auth.rs  zap_config.rs  zap_event.rs  zap_event_to_subscription_config.rs  zap_event_to_zap_config.rs
