[package]
name = "zapple-pay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zapple-pay"
path = "src/main.rs"

[dependencies]
log = "=0.4.18"
pretty_env_logger = "0.5.0"
anyhow = "1.0"
axum = "0.6.20"
bitcoin = "0.30.2"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "numeric"] }
diesel_migrations = "2.1.0"
itertools = "0.11.0"
lightning = "0.0.121"
lightning-invoice = "0.29.0"
hex = "0.4.3"
clap = { version = "4.1.14", features = ["derive"] }
futures = "0.3.28"
lnurl-rs = { version = "0.4.1", default-features = false, features = ["async", "async-https"] }
nostr = { version = "0.29.0", default-features = false, features = ["std", "nip04", "nip47"] }
nostr-sdk = "0.29.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.12.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
urlencoding = "2.1.2"
regex = "1.10.2"
lazy_static = "1.4"

[dev-dependencies]
dotenv = "0.15.0"
